--- a/web/themes/citizen_patterns/templates/zzz-custom/layout/page--user--%.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/layout/page--user--%.html.twig
@@ -66,7 +66,6 @@
 		  		<h2>User Dashboard</h2>
 		  		<div class="tour-item-content">
 		  			<div class="content-inner">
-		  				<p>User Dashboard</p>
 		  				<p>This is your user dashboard.  Your name and user role are displayed at the top along with a link to edit your profile and to logout. Your user role defines what areas of the site you can access and what type of content you can work with.</p>
 		  				<p class="avatar-note">Sick of being an avatar? Edit your profile and add a profile picture in the user personalization area.</p>
 		  				<p>Your dashboard provides quick access to any recent content you've created. Clicking on All Recent Content shows content recently created by anyone. If you are a site manager or editor, clicking on Waiting for Review will show you content that has been created and is waiting for review and publishing.</p>
@@ -107,6 +106,7 @@
 	  	</div>
 	  	<div id="admin-nav" aria-hidden="true" class="flag">Admin Toolbar</div>
 	  	<div id="your-dash" aria-hidden="true" class="flag">User Dashboard</div>
+	  	<div id="support" aria-hidden="true" class="flag">Support Guide</div>
 	  	<div class="close-cookie">
 	  		<a href="#" class="tour-close">Close Forever</a>
 	  	</div>
