Dropbuttons, views tables, view ui

--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_component-color-vars.scss
@@ -98,7 +98,7 @@ $tableHeaderText  : $white;
 $rowBorder        : $borderRule;
 $evenRowBack      : $siteBack;
 $evenRowText      : $baseText;
-$oddRowBack       : $grey;
+$oddRowBack       : $lightGrey;
 $oddRowText       : $baseText;
 
 
