--- a/web/themes/crane/css/crane.css
+++ b/web/themes/crane/css/crane.css
@@ -4385,8 +4385,10 @@ a, .link {
   border-color: #026cc5;
   font-size: 1.4rem;
   font-weight: 400; }
+  .js .dropbutton-multiple .dropbutton-widget .dropbutton-toggle input.form-submit, .js .dropbutton-wrapper .dropbutton-widget .dropbutton-toggle input.form-submit, .js .dropbutton-single .dropbutton-widget .dropbutton-toggle input.form-submit, .js .dropbutton-multiple .dropbutton-action input.form-submit, .js .dropbutton-wrapper .dropbutton-action input.form-submit, .js .dropbutton-single .dropbutton-action input.form-submit, .js .dropbutton-multiple .dropbutton-widget .dropbutton-toggle .button.form-submit, .js .dropbutton-wrapper .dropbutton-widget .dropbutton-toggle .button.form-submit, .js .dropbutton-single .dropbutton-widget .dropbutton-toggle .button.form-submit, .js .dropbutton-multiple .dropbutton-action .button.form-submit, .js .dropbutton-wrapper .dropbutton-action .button.form-submit, .js .dropbutton-single .dropbutton-action .button.form-submit, .js .dropbutton-multiple .dropbutton-widget .dropbutton-toggle a.form-submit, .js .dropbutton-wrapper .dropbutton-widget .dropbutton-toggle a.form-submit, .js .dropbutton-single .dropbutton-widget .dropbutton-toggle a.form-submit, .js .dropbutton-multiple .dropbutton-action a.form-submit, .js .dropbutton-wrapper .dropbutton-action a.form-submit, .js .dropbutton-single .dropbutton-action a.form-submit, .js .dropbutton-multiple .dropbutton-widget .dropbutton-toggle button.form-submit, .js .dropbutton-wrapper .dropbutton-widget .dropbutton-toggle button.form-submit, .js .dropbutton-single .dropbutton-widget .dropbutton-toggle button.form-submit, .js .dropbutton-multiple .dropbutton-action button.form-submit, .js .dropbutton-wrapper .dropbutton-action button.form-submit, .js .dropbutton-single .dropbutton-action button.form-submit {
+    text-transform: none; }
   .js .dropbutton-multiple .dropbutton-widget .dropbutton-toggle input:hover, .js .dropbutton-wrapper .dropbutton-widget .dropbutton-toggle input:hover, .js .dropbutton-single .dropbutton-widget .dropbutton-toggle input:hover, .js .dropbutton-multiple .dropbutton-action input:hover, .js .dropbutton-wrapper .dropbutton-action input:hover, .js .dropbutton-single .dropbutton-action input:hover, .js .dropbutton-multiple .dropbutton-widget .dropbutton-toggle input:focus, .js .dropbutton-wrapper .dropbutton-widget .dropbutton-toggle input:focus, .js .dropbutton-single .dropbutton-widget .dropbutton-toggle input:focus, .js .dropbutton-multiple .dropbutton-action input:focus, .js .dropbutton-wrapper .dropbutton-action input:focus, .js .dropbutton-single .dropbutton-action input:focus, .js .dropbutton-multiple .dropbutton-widget .dropbutton-toggle .button:hover, .js .dropbutton-wrapper .dropbutton-widget .dropbutton-toggle .button:hover, .js .dropbutton-single .dropbutton-widget .dropbutton-toggle .button:hover, .js .dropbutton-multiple .dropbutton-action .button:hover, .js .dropbutton-wrapper .dropbutton-action .button:hover, .js .dropbutton-single .dropbutton-action .button:hover, .js .dropbutton-multiple .dropbutton-widget .dropbutton-toggle .button:focus, .js .dropbutton-wrapper .dropbutton-widget .dropbutton-toggle .button:focus, .js .dropbutton-single .dropbutton-widget .dropbutton-toggle .button:focus, .js .dropbutton-multiple .dropbutton-action .button:focus, .js .dropbutton-wrapper .dropbutton-action .button:focus, .js .dropbutton-single .dropbutton-action .button:focus, .js .dropbutton-multiple .dropbutton-widget .dropbutton-toggle a:hover, .js .dropbutton-wrapper .dropbutton-widget .dropbutton-toggle a:hover, .js .dropbutton-single .dropbutton-widget .dropbutton-toggle a:hover, .js .dropbutton-multiple .dropbutton-action a:hover, .js .dropbutton-wrapper .dropbutton-action a:hover, .js .dropbutton-single .dropbutton-action a:hover, .js .dropbutton-multiple .dropbutton-widget .dropbutton-toggle a:focus, .js .dropbutton-wrapper .dropbutton-widget .dropbutton-toggle a:focus, .js .dropbutton-single .dropbutton-widget .dropbutton-toggle a:focus, .js .dropbutton-multiple .dropbutton-action a:focus, .js .dropbutton-wrapper .dropbutton-action a:focus, .js .dropbutton-single .dropbutton-action a:focus, .js .dropbutton-multiple .dropbutton-widget .dropbutton-toggle button:hover, .js .dropbutton-wrapper .dropbutton-widget .dropbutton-toggle button:hover, .js .dropbutton-single .dropbutton-widget .dropbutton-toggle button:hover, .js .dropbutton-multiple .dropbutton-action button:hover, .js .dropbutton-wrapper .dropbutton-action button:hover, .js .dropbutton-single .dropbutton-action button:hover, .js .dropbutton-multiple .dropbutton-widget .dropbutton-toggle button:focus, .js .dropbutton-wrapper .dropbutton-widget .dropbutton-toggle button:focus, .js .dropbutton-single .dropbutton-widget .dropbutton-toggle button:focus, .js .dropbutton-multiple .dropbutton-action button:focus, .js .dropbutton-wrapper .dropbutton-action button:focus, .js .dropbutton-single .dropbutton-action button:focus {
-    background-color: #f6f6f6 !important;
+    background-color: #f2f9fb !important;
     background-image: none !important;
     border-radius: 0 !important;
     box-shadow: none; }
@@ -6602,12 +6604,67 @@ body:not(.role-administrator) #block-tabs nav.tabs.blocks.block-types {
 
 /* VIEWS UI
 ----------------- */
+.views-displays .tabs.secondary {
+  display: flex;
+  display: -ms-flexbox;
+  flex-direction: row;
+  -ms-flex-direction: row;
+  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  justify-content: flex-start;
+  -ms-flex-pack: start;
+  align-items: flex-start;
+  -ms-flex-align: start; }
+  .views-displays .tabs.secondary li {
+    float: none; }
+    .views-displays .tabs.secondary li.is-active a.is-active:hover, .views-displays .tabs.secondary li.is-active a.is-active:focus {
+      background: #747474; }
+  .views-displays .tabs.secondary a {
+    border-radius: 0;
+    line-height: 1;
+    padding: 2px 7px;
+    min-height: 24px;
+    display: flex;
+    display: -ms-flexbox;
+    flex-direction: row;
+    -ms-flex-direction: row;
+    flex-wrap: nowrap;
+    -ms-flex-wrap: none;
+    justify-content: center;
+    -ms-flex-pack: center;
+    align-items: center;
+    -ms-flex-align: center; }
+    .views-displays .tabs.secondary a span.icon {
+      top: 0px; }
+  .views-displays .tabs.secondary .action-list {
+    top: 100%;
+    border: 1px solid #026cc5; }
+    .views-displays .tabs.secondary .action-list li {
+      background: #ffffff; }
+      .views-displays .tabs.secondary .action-list li:first-child {
+        border-radius: 0; }
+      .views-displays .tabs.secondary .action-list li:last-child {
+        border-radius: 0; }
+      .views-displays .tabs.secondary .action-list li:not(:last-child) {
+        border-bottom: 1px solid #cccccc; }
+      .views-displays .tabs.secondary .action-list li:hover {
+        background: #f6f6f6; }
+    .views-displays .tabs.secondary .action-list input.form-submit {
+      width: 100%;
+      text-align: left;
+      color: #026cc5;
+      font-weight: 400;
+      text-transform: none; }
+
 .views-ui-display-tab-bucket {
   margin-bottom: 1rem; }
   .views-ui-display-tab-bucket .views-display-setting {
     font-size: 1.5rem; }
   .views-ui-display-tab-bucket .views-ui-display-tab-bucket__title {
-    font-size: 1.5rem; }
+    font-size: 1.5rem;
+    min-height: 22px; }
+  .views-ui-display-tab-bucket .dropbutton-wrapper {
+    top: -3px; }
 
 .views-ui-dialog .views-override.form--inline .js-form-item-override-dropdown {
   max-width: 175px; }
