--- a/web/themes/crane/scss/elements/_buttons.scss
+++ b/web/themes/crane/scss/elements/_buttons.scss
@@ -142,7 +142,7 @@ $buttonPadding: 1.15rem 1.5rem 1rem;
 			text-transform: none;
 		}
 		&:hover,&:focus{
-			background-color: $iceBlue !important;
+			background-color: $offWhite !important;
 			background-image: none !important;
 			border-radius: 0 !important;
 			box-shadow: none;
