--- a/web/themes/crane/templates/layout/html.html.twig
+++ b/web/themes/crane/templates/layout/html.html.twig
@@ -30,6 +30,7 @@
     <head-placeholder token="{{ placeholder_token|raw }}">
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token|raw }}">
+    <js-placeholder token="{{ placeholder_token }}">
     <link rel="apple-touch-icon" sizes="180x180" href="/themes/crane/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/themes/crane/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/themes/crane/favicons/favicon-16x16.png">
