--- a/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_site-styles.scss
+++ b/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_site-styles.scss
@@ -392,32 +392,34 @@ body {
 /* MESSAGING
 ----------------- */
 .drupal-message {
-	padding: 15px 20px 12px 45px;
-	margin-top: $spaceMd;
+	padding: $spaceMd 20px $spaceMd 45px;
+	margin: $spaceMd 0;
 	background-repeat: no-repeat;
 	background-position: 12px center;
 	background-size: 20px 20px;
-	border-top: 1px solid;
-	border-bottom: 1px solid;
-	margin-bottom: $spaceMd;
+	font-size: 1.8rem;
+	background-color: $messageBack;
+	color: $messageText;
+	border-left: 10px solid;
+	box-shadow: none;
 	max-width: $contentStop;
 	@include auto;
+	a{
+		color: $gold;
+		&:hover,&:focus{
+			opacity: .6;
+		}
+	}
 	&.error-message{
-		background-color: $messageErrorBack;
-		border-color: $messageErrorText;
-		color: $messageErrorText;
+		border-color: $messageErrorBorder;
 		background-image: url($messageErrorIcon);
 	}
 	&.warning-message{
-		background-color: $messageWarningBack;
-		border-color: $messageWarningText;
-		color: $messageWarningText;
+		border-color: $messageWarningBorder;
 		background-image: url($messageWarningIcon);
 	}
 	&.status-message{
-		background-color: $messageGoodBack;
-		border-color: $messageGoodText;
-		color: $messageGoodText;
+		border-color: $messageGoodBorder;
 		background-image: url($messageGoodIcon);
 	}
 }
