--- a/web/themes/crane/scss/entities/_tables.scss
+++ b/web/themes/crane/scss/entities/_tables.scss
@@ -29,16 +29,26 @@
 	thead th{
 		background: $tableHeaderBack;
 		color: $tableHeaderText;
-		padding: 2rem 1.5rem;
+		padding: 1.5rem 1.5rem;
 		text-align: left;
 		font-weight: $heavy;
-		font-size: $baseSize;
+		font-size: 1.8rem;
+		border-top: 3px solid $tableHeaderBack;
+		border-bottom: 3px solid $tableHeaderBack;
 		& > tr{
 			border-bottom: none;
 		}
 		a{
 			color: $black;
+			position: relative;
 			display: block;
+			width: 100%;
+			height: 100%;
+			background-repeat: no-repeat;
+			background-size: 15px;
+			background-position: center left;
+			background-image: url('../images/icons/admin-icons/sort.svg');
+			padding-left: 25px;
 			&:after{
 				content: none;
 			}
@@ -49,23 +59,30 @@
 			.tablesort{
 				background: none;
 				float: none;
-				position: relative;
-				top: -3px;
+				position: absolute;
+				top: -1px;
+				left: -18px;
 				margin-left: 5px;
-				&.tablesort--desc{
-					@include triangle(down,5px,8px,$black);
+				background-repeat: no-repeat;
+				background-size: contain;
+				background-position: center;
+				width: 18px;
+				height: 18px;
+				&.tablesort--desc{	
+					background-image: url('../images/icons/admin-icons/arrow-down-blue.svg');
 				}
 				&.tablesort--asc{
-					@include triangle(up,5px,8px,$black);
+					background-image: url('../images/icons/admin-icons/arrow-up-blue.svg');
 				}
 			}
 		}
 		&.is-active{
 			background: lighten($tableHeaderBack, 3%);
+			border-top-color: lighten($tableHeaderBack, 3%);
+			border-bottom-color: $link;
 			& > a{
-				&:hover,&:focus{
-					color: $midBlue;
-				}
+				color: $link;
+				background-image: none;
 			}
 		}
 		&:first-child{
