--- a/web/themes/crane/scss/base/_01-colors.scss
+++ b/web/themes/crane/scss/base/_01-colors.scss
@@ -50,11 +50,11 @@ $cautionText       : $white;
 $altBack           : $green;
 $altText           : $white;
 
-$tabsBorder       : $link;
+$tabsBorder       : $darkGrey;
 $tabsBack         : $siteBack;
 $tabsText         : $black;
-$tabsActiveBack   : $blueGrey;
-$tabsActiveBorder : $blueGrey;
+$tabsActiveBack   : $gold;
+$tabsActiveBorder : $gold;
 $tabsActiveText   : $black;
 
 $formElementBorder        : $borderRule;
